--- a/templates/lambe.html
+++ b/templates/lambe.html
@@ -62,7 +62,7 @@ $(document).ready(function () {
         var a = $("#funcao_a").val();
         var b = $("#funcao_b").val();
         var uf = $("#estado_a").val();
-        window.location.href = "{{ url_for('index') }}../l/"+a+"/"+uf+"/"+b+"/"+uf;
+        window.location.href = "{{ url_for('index') }}l/"+a+"/"+uf+"/"+b+"/"+uf;
     })
 });
 
