fixing og:thumb

--- a/templates/lambe.html
+++ b/templates/lambe.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Lambe Lambe da Transparência</title>
 {% if l %}
-    <meta property="og:image" content="{{ url_for('static', filename='l.image') }}" />
+    <meta property="og:image" content="{{ url_for('static', filename='raw/'+l.image+'-hi.png') }}" />
 {% endif %}
 <style>
 @font-face {
