--- a/templates/lambe.html
+++ b/templates/lambe.html
@@ -1,7 +1,14 @@
 <!doctype html>
 <title>Lambe Lambe da Transparência</title>
-{% if l %}
+{% if l and l.image %}
+    <meta property="og:title" content="LambeLambe - {{l.a.orgao}} e {{l.b.orgao}} - {{l.a.estado}} | Repasses Federais 2012">
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="{{ url_for('static', filename='raw/'+l.image+'-hi.png') }}" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="430">
+    <meta property="og:image:height" content="630">
+    <meta property="og:description" content='{{l.a.estado|preposicao}} {{l.a.estado|longo}}, em 2012, <span class="a">{{l.a.orgao}}</span> recebeu do Governo Federal <b>{{l.razao}}</b> vezes {{l.  proporcao}} do que <span class="b">{{l.b.orgao}}</span>{% if l.a.estado != l.b.estado %} {{l.b.estado|preposicao}} {{l.b.estado}} {% endif %}.'>
+
 {% endif %}
 <style>
 @font-face {
