cleaning description og property

--- a/templates/lambe.html
+++ b/templates/lambe.html
@@ -7,7 +7,7 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="430">
     <meta property="og:image:height" content="630">
-    <meta property="og:description" content='{{l.a.estado|preposicao}} {{l.a.estado|longo}}, em 2012, <span class="a">{{l.a.orgao}}</span> recebeu do Governo Federal <b>{{l.razao}}</b> vezes {{l.  proporcao}} do que <span class="b">{{l.b.orgao}}</span>{% if l.a.estado != l.b.estado %} {{l.b.estado|preposicao}} {{l.b.estado}} {% endif %}.'>
+    <meta property="og:description" content='{{l.a.estado|preposicao}} {{l.a.estado|longo}}, em 2012, {{l.a.orgao}} recebeu do Governo Federal {{l.razao}} vezes {{l.proporcao}} do que {{l.b.orgao}}{% if l.a.estado != l.b.estado %} {{l.b.estado|preposicao}} {{l.b.estado}} {% endif %}.'>
 
 {% endif %}
 <style>
